published eCommerce Website

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
             <!-- footer area  -->
 <footer>
-  <p>$copy all rights reserved by Fardin Siam.</p>
+  <p>&copy all rights reserved by Fardin Siam.</p>
 </footer>
 
  <script src="js/bootstrap.bundle.js"></script>
